<resources>
    <string name="app_name">Teste UpBase</string>
    <string name="name">Nome do Paciente</string>
    <string name="contratar">Contratar</string>
    <string name="selec_dia_horario">Selecione o dia e horário para o plantão.</string>
    <string name="horario">Horário</string>
    <string name="home">Home</string>
    <string name="plantoes">Plantões</string>
    <string name="favoritos">Favoritos</string>
    <string name="minha_conta">Minha Conta</string>
    <string name="dia">Dia</string>
    <string name="continuar">Continuar</string>
    <string name="voltar">Voltar</string>
    <string name="esther">Esther</string>
    <string name="home_care">Home Care</string>
    <string name="perfil">Selecione seu perfil abaixo para acessar sua conta:</string>
    <string name="respons">Responsável</string>
    <string name="profissional">Profissional</string>
    <string name="reportar">Reportar</string>
    <string name="prof_nao_comp">O profissional não compareceu.</string>
    <string name="prof_bom_serv">O profissional não prestou um bom serviço.</string>
    <string name="outro">Outro.</string>
    <string name="especifique">Especifique aqui o que houve.</string>
</resources>