<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@id/icons"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/contratar"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/text_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/selec_dia_horario"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nome_paciente"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/text_info"
        app:layout_constraintTop_toBottomOf="@+id/text_info">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nome_paciente_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:hint="@string/name"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dia"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/nome_paciente"
        app:layout_constraintStart_toStartOf="@+id/nome_paciente"
        app:layout_constraintTop_toBottomOf="@+id/nome_paciente">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/diaT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/nunito_semibold"
            android:hint="@string/dia" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/horario"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/nome_paciente"
        app:layout_constraintStart_toStartOf="@+id/dia"
        app:layout_constraintTop_toBottomOf="@+id/dia">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/horarioT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/nunito_semibold"
            android:hint="@string/horario" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continuar"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_btn_blue"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/continuar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/horario"
        app:layout_constraintStart_toStartOf="@id/horario"
        app:layout_constraintTop_toBottomOf="@id/horario" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/voltar"
        android:textColor="@color/continue_background"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/continuar"
        app:layout_constraintStart_toStartOf="@id/continuar"
        app:layout_constraintTop_toBottomOf="@id/continuar" />

    <LinearLayout
        android:id="@+id/icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include
            layout="@layout/icons_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>