<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".08"
        android:background="@color/login_background">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/stars"
            app:layout_constraintBottom_toTopOf="@id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:fontFamily="@font/hyper_space_heavy"
            android:text="@string/esther"
            android:textColor="@color/white"
            android:textSize="70sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/home_care"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/text_perfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/perfil"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_resp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/shape_btn_blue"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/respons"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/text_perfil"
            app:layout_constraintStart_toStartOf="@id/text_perfil"
            app:layout_constraintTop_toBottomOf="@id/text_perfil" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_btn_white"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/profissional"
            android:textAllCaps="false"
            android:textColor="@color/continue_background"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/btn_resp"
            app:layout_constraintStart_toStartOf="@id/btn_resp"
            app:layout_constraintTop_toBottomOf="@id/btn_resp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>